2007-02-11	kaffeetisch

	* Glib.pm, NEWS, README, copyright.pod: Stable release 1.143.

2007-01-21	kaffeetisch

	Merge from HEAD:

	* Makefile.PL: Check that glib >= 2.12.0, not 2.11.0, before
	including GBookmarkFile.xs.

2006-12-30	kaffeetisch

	Merge from HEAD:

	* Glib.xs: Call g_threads_init before g_type_init.  Required (and
	probably enforced in the near future) by recent glib versions.

2006-12-04	kaffeetisch

	* Glib.pm, NEWS, README: Stable release 1.142.

2006-11-23	kaffeetisch

	Merge from HEAD:

	* GType.xs, gperl.h: Revert the G_OS_WIN32 change and just use
	WIN32 instead.  G_OS_WIN32 doesn't seem to be defined on most
	win32 boxes.

	* AUTHORS, GType.xs: Use _strtoi64 and and _strtoui64 on win32 if
	compiling with MSVC; patch from Serguei Trouchelle.

2006-11-19	kaffeetisch

	* Glib.pm, NEWS, README: Stable release 1.141.

2006-11-19	kaffeetisch

	Merge from HEAD:

	* GBookmarkFile.xs: Remove a custom "=for signature" directive
	that incorrectly specified a boolean return value for remove_item.

	* GType.xs, gperl.h: Use G_OS_WIN32 instead of WIN32 or _WIN32.

2006-10-03	kaffeetisch

	* CodeGen.pm, GenPod.pm, ParseXSDoc.pm: Fix POD errors.  (Mainly
	=cut's not followed by a blank line.)

2006-09-13	kaffeetisch

	* GBoxed.xs (gperl_new_boxed_copy): Check for NULL before passing
	the boxed pointer to g_boxed_copy.

	* GType.xs: Add macros, PORTABLE_STRTOLL and PORTABLE_STRTOULL, to
	centralize the preprocessor madness for 64bit integer support.  On
	win32, which apparently lacks strtoll or similar, use strtol and
	strtoul for now to make it at least compile.

	* t/7.t: Apply a patch from Michael G Schwern that introduces
	helper functions which make this complicated test easier to read.

	* t/filename.t: Remove two debug prints that were causing perl
	warnings.

2006-09-09	kaffeetisch

	* t/4.t, t/5.t, t/6.t, t/7.t, t/9.t: In hand-rolled test output,
	use '-' instead of '#' as the comment designator.  In TAP (Test